# cabal-sdist-tar-unclear-error

./: cabal-sdist.cabal  reproduce.sh
test/data/really-long-name-to-trigger-something/: really-long-name-to-trigger-something.cabal
